# snek

./: .gitignore  CMakeLists.txt  README.md
src/: controller.cpp  controller.hpp  fruit.cpp  fruit.hpp  game.cpp  game.hpp  main.cpp  sdl_exception.cpp  sdl_exception.hpp  snake.cpp  snake.hpp
